<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="adjclosed">AdjClose</string>
    <string name="app_label">Stock Market Project</string>
    <string name="app_name">Stock Market</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="closed">Closed</string>
    <string name="date">Date</string>
    <string name="error_label">Stock Cannot Be Found!</string>
    <string name="timeout_label">Error downloading stock data!</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="open">Open</string>
    <string name="search_hint">Search Stock Company</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_test_scroll">testScroll</string>
    <string name="volume">Volume</string>
</resources>
